fix: updated alignment token symbol in header

--- a/src/components/organisms/TradeDashboard/TradeMarketSelector/TradeRatesCard/TradeRatesCard.css
+++ b/src/components/organisms/TradeDashboard/TradeMarketSelector/TradeRatesCard/TradeRatesCard.css
@@ -13,8 +13,8 @@
 }
 
 .rates_box_symbol {
-  height: 1.2rem;
-  margin-right: 0.3rem;
+  height: 1.3rem;
+  margin-right: 0.5rem;
 }
 
 .rates_box_label {
@@ -40,6 +40,7 @@
 
 .rb_text_1 > div {
   display: flex;
+  align-items: center;
 }
 
 .rb_text_1 strong {
